First code clean-up